crates/rome_js_formatter/tests/specs/prettier/typescript/error-recovery/index-signature.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: index-signature.ts

---
# Input
```js
type A = { [key: string] };

type TwoParams = {
  [a: string, b: string]: string;
};
type ThreeParams = {
  [a: string, b: string, c: string]: string;
};

type TooLong = {
  [loooooooooooooooooooooooooong: string, looooooooooooooooooooooooooooooooooooooong: string]: string;
}
type TooLong81 = { [loooooooooooooooooooooooooong: string, loooooooooooooooooong: string]: string; }
type TooLong80 = { [loooooooooooooooooooooooooong: string, looooooooooooooooong: string]: string; }

// note lack of trailing comma in the index signature
type TooLongSingleParam = {
  [looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong: string]: string;
}

```

# Output
```js
type A = { [key: string] };

type TwoParams = {
  [a: string, b: string]: string;
}
type ThreeParams = {
  [a: string, b: string, c: string]: string;
}

type TooLong = {
  [loooooooooooooooooooooooooong: string, looooooooooooooooooooooooooooooooooooooong: string]: string;
}
type TooLong81 = { [loooooooooooooooooooooooooong: string, loooooooooooooooooong: string]: string;
}
type TooLong80 = { [loooooooooooooooooooooooooong: string, looooooooooooooooong: string]: string;
}

// note lack of trailing comma in the index signature
type TooLongSingleParam = {
  [looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong: string]: string,
};

```

# Errors
```
error[SyntaxError]: An index signature must have a type annotation
  ┌─ index-signature.ts:1:26
  │
1 │ type A = { [key: string] };
  │                          ^

error[SyntaxError]: expected `']'` but instead found `,`
  ┌─ index-signature.ts:4:13
  │
4 │   [a: string, b: string]: string;
  │             ^ unexpected

error[SyntaxError]: ';' expected'
  ┌─ index-signature.ts:4:24
  │
4 │   [a: string, b: string]: string;
  │                        ^ An explicit or implicit semicolon is expected here...

error[SyntaxError]: expected a property, or a signature but instead found ';'
  ┌─ index-signature.ts:4:33
  │
4 │   [a: string, b: string]: string;
  │                                 ^ Expected a property, or a signature here

error[SyntaxError]: expected a statement but instead found '}'
  ┌─ index-signature.ts:5:1
  │
5 │ };
  │ ^ Expected a statement here

error[SyntaxError]: expected `']'` but instead found `,`
  ┌─ index-signature.ts:7:13
  │
7 │   [a: string, b: string, c: string]: string;
  │             ^ unexpected

error[SyntaxError]: ';' expected'
  ┌─ index-signature.ts:7:35
  │
7 │   [a: string, b: string, c: string]: string;
  │                                   ^ An explicit or implicit semicolon is expected here...

error[SyntaxError]: expected a property, or a signature but instead found ';'
  ┌─ index-signature.ts:7:44
  │
7 │   [a: string, b: string, c: string]: string;
  │                                            ^ Expected a property, or a signature here

error[SyntaxError]: expected a statement but instead found '}'
  ┌─ index-signature.ts:8:1
  │
8 │ };
  │ ^ Expected a statement here

error[SyntaxError]: expected `']'` but instead found `,`
   ┌─ index-signature.ts:11:41
   │
11 │   [loooooooooooooooooooooooooong: string, looooooooooooooooooooooooooooooooooooooong: string]: string;
   │                                         ^ unexpected

error[SyntaxError]: ';' expected'
   ┌─ index-signature.ts:11:93
   │
11 │   [loooooooooooooooooooooooooong: string, looooooooooooooooooooooooooooooooooooooong: string]: string;
   │                                                                                             ^ An explicit or implicit semicolon is expected here...

error[SyntaxError]: expected a property, or a signature but instead found ';'
   ┌─ index-signature.ts:11:102
   │
11 │   [loooooooooooooooooooooooooong: string, looooooooooooooooooooooooooooooooooooooong: string]: string;
   │                                                                                                      ^ Expected a property, or a signature here

error[SyntaxError]: expected a statement but instead found '}'
   ┌─ index-signature.ts:12:1
   │
12 │ }
   │ ^ Expected a statement here

error[SyntaxError]: expected `']'` but instead found `,`
   ┌─ index-signature.ts:13:58
   │
13 │ type TooLong81 = { [loooooooooooooooooooooooooong: string, loooooooooooooooooong: string]: string; }
   │                                                          ^ unexpected

error[SyntaxError]: ';' expected'
   ┌─ index-signature.ts:13:89
   │
13 │ type TooLong81 = { [loooooooooooooooooooooooooong: string, loooooooooooooooooong: string]: string; }
   │                                                                                         ^ An explicit or implicit semicolon is expected here...

error[SyntaxError]: expected a property, or a signature but instead found ';'
   ┌─ index-signature.ts:13:98
   │
13 │ type TooLong81 = { [loooooooooooooooooooooooooong: string, loooooooooooooooooong: string]: string; }
   │                                                                                                  ^ Expected a property, or a signature here

error[SyntaxError]: expected a statement but instead found '}'
   ┌─ index-signature.ts:13:100
   │
13 │ type TooLong81 = { [loooooooooooooooooooooooooong: string, loooooooooooooooooong: string]: string; }
   │                                                                                                    ^ Expected a statement here

error[SyntaxError]: expected `']'` but instead found `,`
   ┌─ index-signature.ts:14:58
   │
14 │ type TooLong80 = { [loooooooooooooooooooooooooong: string, looooooooooooooooong: string]: string; }
   │                                                          ^ unexpected

error[SyntaxError]: ';' expected'
   ┌─ index-signature.ts:14:88
   │
14 │ type TooLong80 = { [loooooooooooooooooooooooooong: string, looooooooooooooooong: string]: string; }
   │                                                                                        ^ An explicit or implicit semicolon is expected here...

error[SyntaxError]: expected a property, or a signature but instead found ';'
   ┌─ index-signature.ts:14:97
   │
14 │ type TooLong80 = { [loooooooooooooooooooooooooong: string, looooooooooooooooong: string]: string; }
   │                                                                                                 ^ Expected a property, or a signature here

error[SyntaxError]: expected a statement but instead found '}'
   ┌─ index-signature.ts:14:99
   │
14 │ type TooLong80 = { [loooooooooooooooooooooooooong: string, looooooooooooooooong: string]: string; }
   │                                                                                                   ^ Expected a statement here


```


